--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   
   animations: ^2.0.11
   shimmer: ^3.0.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -38,3 +39,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo-NossoDinDin.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo-NossoDinDin.png"
