--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   provider: any
   cupertino_icons: ^1.0.8
   material_symbols_icons: ^4.2780.0
+  image_picker: ^1.0.7
   uuid: ^4.0.0
+  permission_handler: ^11.3.1
   
   sqflite: ^2.3.0
   shared_preferences: ^2.2.2
