--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   supabase_flutter: ^2.0.0
   provider: any
   cupertino_icons: ^1.0.8
@@ -24,7 +26,8 @@ dependencies:
   
   fl_chart: ^0.68.0
   
-  intl: ^0.19.0
+  intl: ^0.20.2
+
   
   formz: ^0.6.1
   
@@ -42,6 +45,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/logo-NossoDinDin.png
 
