--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   animations: ^2.0.11
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.14.4
+  flutter_multi_formatter: ^2.13.7
 
 dev_dependencies:
   flutter_test:
