--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_multi_formatter: ^2.13.7
   flutter_masked_text2: ^0.9.1
+  mask_text_input_formatter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
