--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,54 +1,64 @@
-name: Deploy Flutter Web App - NossoDinDin
+name: Deploy Flutter Web to GitHub Pages
 
 on:
   push:
     branches: [ master ]
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-      
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.19.0'
-        channel: 'stable'
-        cache: true
+      - name: Checkout
+        uses: actions/checkout@v4
         
-    - name: Verify Flutter Installation
-      run: flutter doctor -v
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.0'
+          channel: 'stable'
+          cache: true
+          
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
         
-    - name: Enable Flutter Web
-      run: flutter config --enable-web
-      
-    - name: Clean Project
-      run: flutter clean
-      
-    - name: Install Dependencies
-      run: flutter pub get
-      
-    - name: Build Web Application
-      run: flutter build web --release --web-renderer canvaskit
-      
-    - name: Add 404 Page for SPA
-      run: cp build/web/index.html build/web/404.html
-      
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/master'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build/web
-        force_orphan: true
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
-        commit_message: 'Deploy NossoDinDin App - ${{ github.sha }}'
-        force_orphan: true
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
-        commit_message: 'Deploy NossoDinDin App - ${{ github.sha }}'
+      - name: Enable Flutter Web
+        run: flutter config --enable-web
+        
+      - name: Install dependencies
+        run: flutter pub get
+        
+      - name: Build Flutter Web
+        run: flutter build web --release --web-renderer canvaskit --base-href "/Finan-as-Pessoais/"
+        
+      - name: Add .nojekyll file
+        run: touch build/web/.nojekyll
+        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './build/web'
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
