--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   supabase_flutter: ^2.0.0
-  provider: any
+  provider: ^6.0.5
   cupertino_icons: ^1.0.8
   material_symbols_icons: ^4.2780.0
   image_picker: ^1.0.7
@@ -23,7 +23,7 @@ dependencies:
   path: ^1.8.3
   http: ^1.2.0
   fl_chart: ^0.68.0
-  intl: ^0.20.2
+  intl: ^0.19.0
   formz: ^0.6.1
   decimal: ^3.0.2
   animations: ^2.0.11
@@ -37,7 +37,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
