--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         run: flutter pub get
         
       - name: Build Flutter Web
-        run: flutter build web --release --web-renderer html --base-href "/Finan-as-Pessoais/"
+        run: flutter build web --release --web-renderer html --base-href "/Finan-as-Pessoais/" --no-tree-shake-icons
         
       - name: Fix base href in index.html
         run: |
