--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -2,9 +2,9 @@ name: Deploy Flutter Web App
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]  # Mudado de main para master
   pull_request:
-    branches: [ main ]
+    branches: [ master ]  # Mudado de main para master
 
 jobs:
   build-and-deploy:
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.16.0'
+        flutter-version: '3.24.0'  # Atualizado para versão mais recente
         channel: 'stable'
     
     - name: Enable Flutter Web
@@ -26,12 +26,11 @@ jobs:
       run: flutter pub get
     
     - name: Build web app
-      run: flutter build web --release --web-renderer canvaskit
+      run: flutter build web --release --web-renderer html --no-tree-shake-icons  # Adicionado --no-tree-shake-icons
     
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/master'  # Mudado de main para master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build/web
-        cname: nossodindin.exemplo.com  # Substitua pelo seu domínio personalizado
