--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,39 @@
-steps:
-  - name: Checkout repository
-    uses: actions/checkout@v4
+name: Build and Deploy Flutter Web
 
-  - name: Upload to Hostinger via FTP
-    uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-    with:
-      server: ${{ secrets.FTP_HOST }}
-      username: ${{ secrets.FTP_USER }}
-      password: ${{ secrets.FTP_PASS }}
-      local-dir: build/web/
-      server-dir: public_html/nossodindin_app/
+on:
+  workflow_dispatch:
+  push:
+    branches: [ master ]
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.22.1'
+        channel: 'stable'
+        cache: true
+
+    - name: Enable Flutter Web
+      run: flutter config --enable-web
+
+    - name: Install dependencies
+      run: flutter pub get
+
+    - name: Build Flutter Web
+      run: flutter build web --release --web-renderer html --base-href "/nossodindin_app/"
+
+    - name: Upload to Hostinger via FTP
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ secrets.FTP_HOST }}
+        username: ${{ secrets.FTP_USER }}
+        password: ${{ secrets.FTP_PASS }}
+        local-dir: build/web
+        server-dir: public_html/nossodindin_app/
