--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   supabase_flutter: ^2.0.0
   provider: ^6.0.5
   cupertino_icons: ^1.0.8
@@ -21,7 +23,7 @@ dependencies:
   path: ^1.8.3
   http: ^1.2.0
   fl_chart: ^0.68.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   formz: ^0.6.1
   decimal: ^3.0.2
   animations: ^2.0.11
