--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,3 +49,6 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/logo-NossoDinDin.png"
+
+dependency_overrides:
+  intl: ^0.20.2
